--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/i3games/gm/issues"
   },
-  "homepage": "https://github.com/i3games/gm#readme"
+  "homepage": "https://github.com/i3games/gm#readme",
+  "dependencies": {
+    "@microsoft/signalr": "^6.0.0",
+    "johnny-five": "^2.1.0"
+  }
 }
